header section completed

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           <div class="none">+234 913 883 1511</div>
           <div>Find Us</div>
           <div  class="none">|</div>
-          <div class="arrowdwn, none">
+          <div class="none">
             <img src="/images/nigerianFlag.svg" alt="nigerianFlag"  class="none"/>
-            <span  class="none">NGN<img src="/images/arrowDown.png" alt="selector" /></span>
+            <span  class="none">NGN<img src="/images/arrowDown.png" alt="selector" height="10px" /></span>
           </div>
         </div>
       </section>
@@ -43,7 +43,7 @@
         <div>
           <img src="/images/coreBankLogo.svg" alt="logo" />
         </div>
-        <div>
+        <div class="none">
           <ul>
             <li>Home</li>
             <li>About</li>
@@ -51,18 +51,18 @@
             <li>Contact Us</li>
           </ul>
         </div>
-        <div>
+        <div class="none">
           <div>Get Started</div>
         </div>
-        <div>
+        <div class="none">
           <button class="getAppBtn">Get App</button>
         </div>
-        <div>
+        <div class="menuLine">
           <img src="/images/optionLine.png" alt="menu1§ ">
         </div>
       </section>
     </header>
-    <section class="section1 none">
+    <!-- <section class="section1 none">
       <h1>
         Bank at your <br />
         finger tip
@@ -205,6 +205,6 @@
       <div>
         <img src="/images/girlPhoneHold.png" alt="img" />
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
