section one in progress

--- a/index.html
+++ b/index.html
@@ -62,18 +62,20 @@
         </div>
       </section>
     </header>
-    <!-- <section class="section1 none">
+
+    <section class="section1">
       <h1>
         Bank at your <br />
         finger tip
       </h1>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing <br />
-        elit, sed do eiusmod tempor incididunt ut labore et <br />
+        Lorem ipsum dolor sit amet, consectetur adipiscing 
+        elit, sed do eiusmod tempor incididunt ut labore et 
         dolore magna aliqua. Ut enim ad minim
       </p>
     </section>
-    <section class="section2">
+
+    <!-- <section class="section2">
       <div class="finances">
         <div class="finBox">
           <img src="/images/loans.png" alt="img" height="50px" width="40px" />
