--- a/index.html
+++ b/index.html
@@ -75,69 +75,65 @@
       </p>
     </section>
 
-    <!-- <section class="section2">
-      <div class="finances">
-        <div class="finBox">
-          <img src="/images/loans.png" alt="img" height="50px" width="40px" />
-          <span>
-            <p>Loans</p>
-          </span>
+    <section class="section2">
+      <div class="none">
+        <div class="finances">
+          <div class="finBox">
+            <img src="/images/loans.png" alt="img"/>
+            <span>
+              <p>Loans</p>
+            </span>
+          </div>
+          <div class="finBox">
+            <img src="/images/savings.png" alt="img"/>
+            <span>
+              <p>Savings</p>
+            </span>
+          </div>
+          <div class="finBox">
+            <img
+              src="/images/investments.png"
+              alt="img"
+            />
+            <span>
+              <p>Investments</p>
+            </span>
+          </div>
+          <div class="finBox">
+            <img
+              src="/images/E-banking.png"
+              alt="img"
+            />
+            <span>
+              <p>E-Banking</p>
+            </span>
+          </div>
+          <div class="finBox">
+            <img src="/images/cards.png" alt="img"/>
+            <span>
+              <p>Cards</p>
+            </span>
+          </div>
+          <div class="finBox">
+            <img src="/images/pos.png" alt="img"/>
+            <span>
+              <p>POS</p>
+            </span>
+          </div>
         </div>
-        <div class="finBox">
-          <img src="/images/savings.png" alt="img" height="50px" width="40px" />
-          <span>
-            <p>Savings</p>
-          </span>
-        </div>
-        <div class="finBox">
-          <img
-            src="/images/investments.png"
-            alt="img"
-            height="50px"
-            width="40px"
-          />
-          <span>
-            <p>Investments</p>
-          </span>
-        </div>
-        <div class="finBox">
-          <img
-            src="/images/E-banking.png"
-            alt="img"
-            height="50px"
-            width="40px"
-          />
-          <span>
-            <p>E-Banking</p>
-          </span>
-        </div>
-        <div class="finBox">
-          <img src="/images/cards.png" alt="img" height="50px" width="40px" />
-          <span>
-            <p>Cards</p>
-          </span>
-        </div>
-        <div class="finBox">
-          <img src="/images/pos.png" alt="img" height="50px" width="40px" />
-          <span>
-            <p>POS</p>
-          </span>
         </div>
       </div>
-
       <div class="whatWeDo">
         <div class="finFreedom">
           <div><img src="/images/colorBlock.png" alt="" /></div>
-          <div class="ff"><h4>Financial Freedom</h4></div>
+          <div class="ff">Financial Freedom</div>
         </div>
-        <h1>What we do</h1>
+        <h3>What we do</h3>
         <div class="WwdLists">
           <div class="WwdLists-item">
             <img
               src="/images/WwdGirls.png"
-              alt="img"
-              height="210px"
-              width="300px"
+              alt="img" width="77%" class="girlholdingphone"
             />
             <h4>Savings</h4>
             <p>
@@ -146,12 +142,10 @@
               laboris
             </p>
           </div>
-          <div class="WwdLists-item">
+          <div class="WwdLists-item none pad">
             <img
               src="/images/WwdPhone.png"
-              alt="img"
-              height="210px"
-              width="300px"
+              alt="img" width="77%"
             />
             <h4>Savings</h4>
             <p>
@@ -160,12 +154,11 @@
               laboris
             </p>
           </div>
-          <div class="WwdLists-item">
+          <div class="WwdLists-item none pad">
             <img
               src="/images/WwdGuy.png"
-              alt="img"
-              height="210px"
-              width="300px"
+              alt="img"width="77%"
+      
             />
             <h4>Savings</h4>
             <p>
@@ -175,10 +168,12 @@
             </p>
           </div>
         </div>
-      </div>
+        <div class="botmLine">
+          <img src="/images/bottomLine.png" alt="nextline">
+        </div>
     </section>
 
-    <section class="section3">
+    <!-- <section class="section3">
       <div class="sec3Container">
         <div class="finFree">
           <div>
