--- a/index.html
+++ b/index.html
@@ -204,5 +204,17 @@
         <img class="sec3img" width="300" src="/images/girlPhoneHold.png" alt="img" />
       </div>
     </section>
+
+    <section class="section4"> 
+<img class="iphoneimg" src="/images/iPhone.png" alt="mobilePhone" width="100">
+<div class="sec4Class">
+  <h6>MOBILE APP</h6>
+  <p>Download Our App</p>
+  <span class="imgSec4">
+    <img class="firstimg" src="/images/AappStore.png" alt="App Store" width="100">
+    <img class="firstimg"src="/images/GappStore.png" alt="Play Store" width="100">
+  </span>
+</div>
+    </section>
   </body>
 </html>
