--- a/index.html
+++ b/index.html
@@ -217,7 +217,34 @@
 </div>
     </section>
 
-
+<section class="section5">
+<div class="oCs">
+  <img src="/images/colorBlock.png" alt="yellowBlock">
+  <h6>Our Clients speaks</h6>
+</div>
+<h3>What people say</h3>
+<div class="reviews">
+  <div class="janeDoe revLists">
+    <h5>Jane Doe</h5>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor s</p>
+    <img src="/images/starRating.png" alt="starRating">
+  </div>
+  <div class="none revLists">
+    <h5>Jane Doe</h5>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor s</p>
+    <img src="/images/starRating.png" alt="starRating">
+  </div>
+  <div class="none revLists">
+     <h5>Jane Doe</h5>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor s</p>
+      <img src="/images/starRating.png" alt="starRating">
+    </div>
+    <div class="btmLine">
+     <img  src="/images/bottomLine.png" alt="swiper">
+    </div>
+  </div>
+</div>
+</section>
 
   </body>
 </html>
