section five completed

--- a/index.html
+++ b/index.html
@@ -176,13 +176,14 @@
     <section class="section3">
       <div class="sec3Container">
         <div class="finFree">
-          <div>
-            <img src="/images/Recgrey.png" alt="img" />
-          </div>
-          <div>
-            <h6 class="sec3ff">Financial Freedom</h6>
-          </div>
+            <img src="/images/girlPhoneHold.png" alt="img" />
         </div>
+        <div>
+          <div class="financefreed">
+            <img src="/images/Recgrey.png" alt="img" />
+            <span>Financial Freedom</span>
+        </div>
+        
         <div>
           <h2>Build with us</h2>
           <p>
@@ -195,26 +196,25 @@
           </p>
           <div class="btnSpace">
             <button class="CanBut">Create an account</button>
-    
             <button class="OeBbut">Open E-Banking</button>
           </div>
         </div>
       </div>
-      <div>
-        <img class="sec3img" width="300" src="/images/girlPhoneHold.png" alt="img" />
       </div>
     </section>
 
-    <section class="section4"> 
-<img class="iphoneimg" src="/images/iPhone.png" alt="mobilePhone" width="100">
-<div class="sec4Class">
+<section class="section4"> 
+  <div class="iphone">
+    <img src="/images/iPhone.png" alt="mobilePhone">
+  </div>
+  <div class="sec4Class">
   <h6>MOBILE APP</h6>
   <p>Download Our App</p>
   <span class="imgSec4">
     <img class="firstimg" src="/images/AappStore.png" alt="App Store" width="100">
     <img class="firstimg"src="/images/GappStore.png" alt="Play Store" width="100">
   </span>
-</div>
+  </div>
     </section>
 
 <section class="section5">
@@ -230,7 +230,7 @@
     <img src="/images/starRating.png" alt="starRating">
   </div>
   <div class="none revLists">
-    <h5>Jane Doe</h5>
+    <h5>John Doe</h5>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor s</p>
     <img src="/images/starRating.png" alt="starRating">
   </div>
@@ -245,7 +245,10 @@
   </div>
 </div>
 </section>
+ 
+<footer>
 
+</footer>
   </body>
 </html>
 
