landing page completed

--- a/index.html
+++ b/index.html
@@ -232,58 +232,115 @@
   </section>
 
   <footer>
-    <div>
-      <img class="cBlogo" src="/images/coreBankLogo.svg" alt="CoreBank">
-    </div>
-    <div class="openP">
-      <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-      </p>
-    </div>
-    <div class="quickL">
+    <div class="mobileFooter">
       <div>
-        <h4>Quick Links</h4>
-        <p>E-Banking </p>
-        <p>Investment</p>
-        <p>Coreflex</p>
-        <p>Corethrift </p>
-        <p> Loans</p>
-        <p>Savings</p>
+        <img class="cBlogo" src="/images/coreBankLogo.svg" alt="CoreBank">
+      </div>
+      <div class="openP">
+        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+          laborum."
+        </p>
+      </div>
+      <div class="quickL">
+        <div>
+          <h4>Quick Links</h4>
+          <p>E-Banking </p>
+          <p>Investment</p>
+          <p>Coreflex</p>
+          <p>Corethrift </p>
+          <p> Loans</p>
+          <p>Savings</p>
+        </div>
+        <div>
+          <h4>Company</h4>
+          <p>About Us</p>
+          <p>Policy’s</p>
+          <p>Contact us</p>
+          <p>FAQ</p>
+        </div>
       </div>
       <div>
-        <h4>Company</h4>
-        <p>About Us</p>
-        <p>Policy’s</p>
-        <p>Contact us</p>
-        <p>FAQ</p>
+        <h4>Contact</h4>
+        <p>22/24 Ago Palace Way, </br>Okota,Isolo, Lagos.</p>
+        <p>+234 915 555 6905 </p>
+        <p> +234 915 555 6906 </p>
+        <p>+234 913 883 1511</p>
+        </br>
+        <p class="customerCare"> customercare@corestepmfb.com</p>
       </div>
-    </div>
-    <div>
-      <h4>Contact</h4>
-      <p>22/24 Ago Palace Way, </br>Okota,Isolo, Lagos.</p>
-      <p>+234 915 555 6905 </p>
-      <p> +234 915 555 6906 </p>
-      <p>+234 913 883 1511</p>
+      <div class="contactimg">
+        <img src="/images/facebook.png" alt="fb">
+        <img src="/images/instagram.png" alt="ig">
+        <img src="/images/mSocial.png" alt="ms">
+        <img src="/images/twitter.png" alt="twitter">
+        <img src="/images/linkedin.png" alt="in">
+      </div>
+      <div class="storeimg">
+        <img src="/images/PlayStoreF.png" alt="playstore"> </br>
+        <img src="/images/AppStoreW.png" alt="appstore">
+      </div>
       </br>
-      <p class="customerCare"> customercare@corestepmfb.com</p>
+      <p>© 2021-2022 Corebank Mfb</p>
+      </br>
     </div>
-    <div class="contactimg">
-      <img src="/images/facebook.png" alt="fb">
-      <img src="/images/instagram.png" alt="ig">
-      <img src="/images/mSocial.png" alt="ms">
-      <img src="/images/twitter.png" alt="twitter">
-      <img src="/images/linkedin.png" alt="in">
+
+    <div class="none desktopFt">
+      <div>
+        <img class="cBlogo" src="/images/coreBankLogo.svg" alt="CoreBank">
+        <p class="letters">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+          anim id est
+          laborum."
+        </p>
+        <br>
+        <img class="appDwn" src="/images/PlayStoreF.png" alt="playstore"> </br> <br>
+        <img class="appDwn" src="/images/AppStoreW.png" alt="appstore">
+      </div>
+
+      <div class="quickLink">
+
+        <div>
+          <h4>Quick Links</h4>
+          <p>E-Banking </p>
+          <p>Investment</p>
+          <p>Coreflex</p>
+          <p>Corethrift </p>
+          <p> Loans</p>
+          <p>Savings</p>
+        </div>
+        <div>
+          <h4>Company</h4>
+          <p>About Us</p>
+          <p>Policy’s</p>
+          <p>Contact us</p>
+          <p>FAQ</p>
+        </div>
+
+        <div>
+          <h4>Contact</h4>
+          <p>22/24 Ago Palace Way, </br>Okota,Isolo, Lagos.</p>
+          <p>+234 915 555 6905 </p>
+          <p> +234 915 555 6906 </p>
+          <p>+234 913 883 1511</p>
+          </br>
+          <p class="customerCare"> customercare@corestepmfb.com</p>
+
+          <img class="cntimg" src="/images/facebook.png" alt="fb">
+          <img class="cntimg" src="/images/instagram.png" alt="ig">
+          <img class="cntimg" src="/images/mSocial.png" alt="ms">
+          <img class="cntimg" src="/images/twitter.png" alt="twitter">
+          <img class="cntimg" src="/images/linkedin.png" alt="in">
+        </div>
+
+      </div>
+
     </div>
-    <div class="storeimg">
-      <img src="/images/PlayStoreF.png" alt="playstore"> </br>
-      <img src="/images/AppStoreW.png" alt="appstore"> 
-    </div>
-  </br>
-    <p>© 2021-2022 Corebank Mfb</p>
-    </br>
+    <br>
     <a class="marq" href="https://github.com/Babatunde99">
-      <marquee behavior="" direction="right"><small>Coded by Adeboye Babatunde</small></marquee>
+      <marquee behavior="" direction="right"><small>Coded by Adeboye Babatunde-click me</small></marquee>
     </a>
+
 
   </footer>
 </body>
+
 </html>
