--- a/index.html
+++ b/index.html
@@ -335,10 +335,12 @@
 
     </div>
     <br>
-    <a class="marq" href="https://github.com/Babatunde99">
+    <a class="marq" target="_blank" href="https://github.com/Babatunde99">
       <marquee behavior="" direction="right"><small>Coded by Adeboye Babatunde-click me</small></marquee>
     </a>
 
+
+  
 
   </footer>
 </body>
